MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/Document_Master_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Document Master Configuration</label>
    <pluralLabel>Document Master Configurations</pluralLabel>
</CustomObject>