MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/Auto_Generate_Document__c.field-meta.xml
<CustomField>
    <fullName>Auto_Generate_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Generate Document</label>
    <type>Checkbox</type>
</CustomField>