MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/Auto_Send_DocuSign_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_DocuSign_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Send DocuSign Email</label>
    <type>Checkbox</type>
</CustomField>