MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/Delivery_Option_ID__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_ID__c</fullName>
    <label>Delivery Option ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>