MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/Delivery_Option_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Option_Name__c</fullName>
    <label>Delivery Option Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>