MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/DocGen_Package_Id__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Package_Id__c</fullName>
    <label>DocGen Package Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>