MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/DocGen_Package_Name__c.field-meta.xml
<CustomField>
    <fullName>DocGen_Package_Name__c</fullName>
    <label>DocGen Package Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>