MODON MRE BPDEV/force-app/main/default/objects/Document_Master_Configuration__mdt/fields/DocumentDescription__c.field-meta.xml
<CustomField>
    <fullName>DocumentDescription__c</fullName>
    <label>Document Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>